# python-project-with-devcontainer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile  compose.yaml
my_package/: __init__.py  main.py
tests/my_package/: test_main.py
