[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_site_packages = true
cache_dir = "~/.mypy_cache"

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "D417",      # https://docs.astral.sh/ruff/rules/undocumented-param/#cache-dir
    "D415",  # https://docs.astral.sh/ruff/rules/ends-in-punctuation/

]
exclude = [
    ".git",
    ".github",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint.per-file-ignores]
# tests ディレクトリ以下に対して除外するルールを指定する
"tests/**/*" = [
    "S101",  # assert
    "PLR2004",  # magic-value-comparison
    "INP001",  # input
    "D" # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.isort]
known-first-party = ["my_package"]

[tool.pytest.ini_options]
cache_dir = "~/.pytest_cache"
